# Dennis-Bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
config/personality/: dennis-bot.md
docs/: DENNIS TOH PERFORMER CV 2026.docx  dennis-bot-agent-tasks.md  dennis-bot-prd.md  deployment.md  operations.md  simplemem-integration.md
knowledge_base/: dennis-toh.md
migrations/: 0001_initial.sql  0002_processed_telegram_updates.sql
scripts/: docker-entrypoint.sh
src/dennis_bot/: __init__.py  app.py  config.py  logging_config.py  main.py
src/dennis_bot/admin/: __init__.py  commands.py  policy.py
src/dennis_bot/brightdata/: __init__.py  client.py  models.py
src/dennis_bot/db/: __init__.py  connection.py  migrations.py
src/dennis_bot/knowledge/: __init__.py  service.py
src/dennis_bot/llm/: __init__.py  client.py  types.py
src/dennis_bot/mcp/: __init__.py  simplemem.py
src/dennis_bot/memory/: __init__.py  service.py
src/dennis_bot/monitors/: __init__.py  default_monitors.py  health.py  models.py  (+4 more)
tests/: test_admin_policy.py  test_brightdata_client.py  test_brightdata_webhook.py  test_config.py  test_db_schema.py  test_health.py  test_instagram_activity_tool.py  test_knowledge_repository_integration.py  test_knowledge_service.py  test_llm_client.py  test_mcp_simplemem.py  test_memory_service.py  test_monitors_service.py  test_orchestrator.py  test_repositories_core.py  test_scheduler_service.py  test_stickers_service.py  test_telegram_integration.py  test_telegram_polling.py  test_telegram_webhook.py
(+28 files in other folders)
